js/js.translator/testData/incremental/invalidation/fakeOverrideInlinePropertyWithCrossModuleInliner/main/classA.kt
class ClassA: AbstractClassA() {
    inline fun testPropertyWithGetter() = propertyWithGetter

    inline fun testPropertyWithSetter(): String {
        propertyWithSetter = "test"
        return savedStr
    }
}
